# gather-vision

./: .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  manage.py  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/: labeler.yml
.github/codeql/: codeql-config.yml
.github/workflows/: app-tests.yml  code-analysis.yml  codeql-analysis.yml  create-package.yml  labeler.yml  static-site.yml  test-package.yml
docs/: gather_vision.html  index.html  index.js  search.js
docs/gather_vision/: app.html  cli.html  index.html  model.html  plugin.html  utils.html
docs/gather_vision/plugin/: data.html  entry.html
gather_vision/: apps.py  asgi.py  settings.py  urls.py  wsgi.py
gather_vision/admin/: __init__.py  custom_site.py  outage.py  outages.py  petition.py  petitions.py  playlists.py  shared.py  transport.py  water_quality.py
gather_vision/management/commands/: outagesimport.py  outagesupdate.py  petitionsimport.py  petitionsupdate.py  playlistsinit.py  playlistsupdate.py  transportupdate.py  visionprocess.py
gather_vision/migrations/: 0001_initial.py  0002_initial.py  0003_alter_petitionchange_options_and_more.py  0003_auto_20211129_0026.py  0004_waterqualitysite_waterqualitysample_and_more.py  0005_alter_waterqualitysample_sample_status.py  0006_alter_waterqualitysample_sample_date.py
gather_vision/models/: __init__.py  abstract_base.py  information_source.py  outage_change.py  outage_group.py  outage_item.py  petition_change.py  petition_item.py  petition_source.py  playlist_entry.py  playlist_item.py  playlist_source.py  playlist_track.py  playlist_track_source.py  transport_item.py  transport_line.py  transport_source.py  water_quality_sample.py  water_quality_site.py
gather_vision/process/cache/: available_expiration_time.py  external_http_cache.py  local_cache.py
gather_vision/process/component/: cache.py  html_extract.py  http_client.py  ical.py  logger.py  metadata.py  normalise.py  spotify_client.py  sqlite_client.py  time_series.py  youtube_music_client.py
gather_vision/process/item/: __init__.py  contact_trace.py  playlist.py  playlist_conf.py  track.py  transport_event.py  water_quality_measure.py
gather_vision/process/manage/: contact_tracing.py  outages.py  petitions.py  playlists.py  transport.py  water_quality.py
gather_vision/process/service/: abc_radio.py  abstract.py  energex_events.py  energex_import.py  last_fm.py  petition_import.py  petitions_au_qld.py  petitions_au_qld_bcc.py  qld_rail_events.py  radio_4zzz.py  spotify.py  translink_notices.py  youtube_music.py
gather_vision/process/service/contact_tracing/: au_qld.py
gather_vision/process/service/discord/: client.py  embed.py  embed_field.py  webhook.py
gather_vision/process/service/outages/: energex_events.py  energex_import.py
gather_vision/process/service/petition/: au_qld.py  au_qld_bcc.py  petition_import.py
gather_vision/process/service/playlist/: abc_radio.py  abstract.py  last_fm.py  radio_4zzz.py  spotify.py  youtube_music.py
gather_vision/process/service/transport/: qld_rail_events.py  translink_notices.py
gather_vision/process/service/water_quality/: au_qld_bcc_waterways.py
gather_vision/process/support/: select_format_mixin.py
gather_vision/process/support/transport/: render_csv_mixin.py  render_ics_mixin.py  render_json_mixin.py  render_txt_mixin.py
gather_vision/static/gather_vision/: graph-change-over-time.js
gather_vision/templates/gather_vision/: layout.html  nav_breadcrumb.html  nav_link.html
gather_vision/templates/gather_vision/about/: index.html
gather_vision/templates/gather_vision/contact_tracing/: index.html
gather_vision/templates/gather_vision/home/: index.html
gather_vision/templates/gather_vision/outages/: index.html
gather_vision/templates/gather_vision/petitions/: index.html
gather_vision/templates/gather_vision/playlists/: index.html
gather_vision/templates/gather_vision/transport/: index.html
gather_vision/templatetags/: gather_vision_extras.py
gather_vision/tests/: support.py  test_cache.py  test_component_abc_radio.py  test_component_cache.py  test_component_last_fm.py  test_component_normalise.py  test_component_radio_4zzz.py  test_mgmt_cmd_contact_tracing.py  test_mgmt_cmd_outages.py  test_mgmt_cmd_petitions.py  test_mgmt_cmd_playlists.py  test_mgmt_cmd_transport.py
gather_vision/tests/process/component/: test_abc_radio.py  test_last_fm.py
gather_vision/views/: contact_tracing.py  general.py  outages.py  petitions.py  playlists.py  transport.py
gather_vision_proj/: admin.py  apps.py  asgi.py  gather_vision_env.py  settings.py  urls.py  wsgi.py
src/: manage.py
src/gather_vision/: __init__.py  app.py  cli.py  model.py  plugin.py  utils.py
src/gather_vision/apps/electricity/: admin.py  apps.py  models.py  urls.py
src/gather_vision/apps/electricity/migrations/: 0001_initial.py  0002_initial.py  0003_event_description_alter_event_modified_date_and_more.py  (+2 more)
src/gather_vision/apps/explore/: admin.py  apps.py  models.py  urls.py
src/gather_vision/apps/legislatures/: apps.py  models.py  urls.py
src/gather_vision/apps/music/: apps.py  urls.py
src/gather_vision/apps/transport/: apps.py  models.py  urls.py
src/gather_vision/apps/water/: admin.py  apps.py  models.py  urls.py
src/gather_vision/obtain/: __init__.py
src/gather_vision/obtain/au/: election.py  government.py  petition.py  water.py
src/gather_vision/obtain/core/: app.py  base.py  cli.py  data.py  entry.py  models.py  utils.py
src/gather_vision/obtain/place/: __init__.py
src/gather_vision/plugin/: data.py  entry.py
src/gather_vision/proj/: __init__.py  admin.py  apps.py  asgi.py  settings.py  settings_old.py  settings_scrapy.py  urls.py  views.py  wsgi.py
static/: site.webmanifest
templates/admin/: base.html
templates/gather_vision/: home.html
templates/layout/: base.html  nav.html
tests/: conftest.py  example_plugin.py  helpers.py  test_app_transport_event_category.py  test_cli.py  test_plugin.py
website/: 404.html  index.html  sitemap.xml
(+65 files in other folders)
